--- a/web.html
+++ b/web.html
@@ -24,9 +24,9 @@
         <section class="tasks">
             <h2>Tugas Grafika komputer:</h2>
         </section>
-        <section class="professor">
+        <section class="algorithm">
             <h3>1. Prof. Daniel Thalmann</h3>
-            <div class="prof-container">
+            <div class="algorithm-content">
                 <img src="Daniel.jpg" alt="Prof. Daniel Thalmann" class="prof-img">
                 <div class="prof-info">
                     <p>Prof. Daniel Thalmann adalah seorang ilmuwan komputer Swiss 
